tests/fixtures/invalid/list_bitor_list.py
# Cannot bitwise OR List[int] and List[int]
x: list[int] = [1, 2, 3] | [1, 2, 3]
